--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "alertifyjs": "^1.13.1",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "jquery-validation": "^1.19.2",
     "popper.js": "^1.14.3"
   }
 }
